--- a/mandelbulber2/qt/dock_navigation.ui
+++ b/mandelbulber2/qt/dock_navigation.ui
@@ -214,9 +214,6 @@
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea_navi">
-     <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAsNeeded</enum>
-     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -228,6 +225,12 @@
         <width>263</width>
         <height>830</height>
        </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_coordinates">
        <property name="spacing">
@@ -1417,6 +1420,11 @@ to target:</string>
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>my_combo_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
@@ -1440,11 +1448,6 @@ to target:</string>
    <class>cButtonResetSettingsFromWidget</class>
    <extends>QPushButton</extends>
    <header>buton_reset_settings_from_widget.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>my_combo_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyDoubleSpinBox</class>
